# h3r.github.io

./: .gitignore  .gitmodules  config.json  index.html  manifest.json  memoria.html  memoria.md  onecore.js
apps/hellowasm/: example.html
apps/hellowasm/example/: CMakeSettings.json
assets/: 404.1a1e3ba3.js  README.4902b0ef.js  [...all].75499abe.js  [name].6f05f673.js  about.b90b4e36.js  index copy.f4052263.js  index.53d4040a.css  index.ca32fc5f.js  vendor.ab0b39cb.js
css/: _style.css  style.css
ex/: e1.html  e2.html  e3.html  e4.html
ex/e10/: index.html  style.css
ex/e10/assets/: shaders.txt  stormy.dds
ex/e5/: Camera.js  ResourceLoader.js  e5.html  style.css  tools.js
ex/e6/: Entity.js  e6.html  style.css
ex/e7/: e7.html
ex/e8/: Camera.js  Entity.js  ShaderManager.js  e8.html  gui.js  tools.js
ex/e9/: cornel.json  cornel2.json  cornel3.json  index.html  predator.json  scene.json  sun.json
js/: app.js  auditpass.js
js/datgui/: style.css
js/litegl/: litegl.js
js/rgb2hsv/: rgb2hsv.js
projects/: index.html  projects.md
projects/hellowasm/: index.html
projects/hellowasm/example/: CMakeLists.txt
projects/hellowebgl/: index.html  run-httpserver.bat  script.js  shader.fs  shader.vs
shaders/: cubegen.fs  cubegen.vs  cubemap.fs  cubemap.vs  flat.fs  flat.vs  new_cubemap.fs  new_cubemap.vs  phong.fs  phong.vs  s5.fs  s5.vs  s6-toTexture.fs  s6-toTexture.vs  sky.fs  sky.vs
teaching/: Teaching.html  Teaching.md  index.html
teaching/Webgl2Wasm/: Webgl2 to Wasm.html
teaching/webgl2wasm/: index.html  webgl2wasm.md
textures/: OutputCube.dds
(+30 files in other folders)
